plugins {
    id 'java'
}

group 'de.kryptikk'
version '1.0-SNAPSHOT'

sourceCompatibility=17
targetCompatibility=17

tasks.withType(JavaCompile) {
    options.compilerArgs += ["--enable-preview"]
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
}

test {
    useJUnitPlatform()
}